--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Star Wars Comparison</title>
   </head>
-  <body class="bg-center bg-starwars">
+  <body class="bg-center bg-starwars bg-cover">
     <div id="root"></div>
   </body>
 </html>
